--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				</section>
 				<section class="cbp-so-section">
 					<article class="cbp-so-side cbp-so-side-left">
-						<h2>Marzipan gingerbread</h2>
+						<h2>Convergence</h2>
 						<p>Soufflé bonbon jelly cotton candy liquorice dessert jelly bear claw candy canes. Pudding halvah bonbon marzipan powder. Marzipan gingerbread sweet jelly.</p>
 					</article>
 					<figure class="cbp-so-side cbp-so-side-right">
