--- a/index.html
+++ b/index.html
@@ -46,11 +46,10 @@
 				</section>
 				<section class="cbp-so-section">
 					<article class="cbp-so-side cbp-so-side-left">
-						<h2>Convergence</h2>
-						<p>Soufflé bonbon jelly cotton candy liquorice dessert jelly bear claw candy canes. Pudding halvah bonbon marzipan powder. Marzipan gingerbread sweet jelly.</p>
-					</article>
+						<h2>Number 1</h2>
+						<p>Tableau réalisé par le peintre américain Jackson Pollock en 1950. Cette huile, émail et aluminium sur toile est conservée à la National Gallery of Art, à Washington</p></article>
 					<figure class="cbp-so-side cbp-so-side-right">
-						<img src="images/3.png" alt="img01">
+						<img src="images/N1.jpg" alt="Oeuvre 3">
 					</figure>
 				</section>
 				<section class="cbp-so-section">
@@ -58,7 +57,7 @@
 						<img src="images/4.png" alt="img01">
 					</figure>
 					<article class="cbp-so-side cbp-so-side-right">
-						<h2>Carrot cake</h2>
+						<h2>Convergence</h2>
 						<p>Sesame snaps sweet wafer danish. Chupa chups carrot cake icing donut halvah bonbon. Chocolate cake candy marshmallow pudding dessert marzipan jujubes sugar plum.</p>
 					</article>
 				</section>
