--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
 				</section>
 				<section class="cbp-so-section">
 					<figure class="cbp-so-side cbp-so-side-left">
-						<img src="images/4.png" alt="img01">
+						<img src="images/convergence.jpg" alt="Oeuvre 4">
 					</figure>
 					<article class="cbp-so-side cbp-so-side-right">
 						<h2>Convergence</h2>
-						<p>Sesame snaps sweet wafer danish. Chupa chups carrot cake icing donut halvah bonbon. Chocolate cake candy marshmallow pudding dessert marzipan jujubes sugar plum.</p>
+						<p>C'est une peinture à l'huile de 1952 par Jackson Pollock</p>
 					</article>
 				</section>
 				<section class="cbp-so-section">
