--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 			<header class="clearfix">
 				<!--<span>Blueprint <span class="bp-icon bp-icon-about" data-content="The Blueprints are a collection of basic and minimal website concepts, components, plugins and layouts with minimal style for easy adaption and usage, or simply for inspiration."></span></span> -->
 				<h1>Jackson Pollock</h1>
-				<nav>
+				<!--<nav>
 					<a href="http://tympanus.net/Blueprints/ResponsiveIconGrid/" class="bp-icon bp-icon-prev" data-info="previous Blueprint"><span>Previous Blueprint</span></a>
 					<a href="" class="bp-icon bp-icon-next" data-info="next Blueprint"><span>Next Blueprint</span></a>
 					<a href="http://tympanus.net/codrops/?p=15962" class="bp-icon bp-icon-drop" data-info="back to the Codrops article"><span>back to the Codrops article</span></a>
 					<a href="http://tympanus.net/codrops/category/blueprints/" class="bp-icon bp-icon-archive" data-info="Blueprints archive"><span>Go to the archive</span></a>
-				</nav>
+				</nav>-->
 			</header>
 			<div id="cbp-so-scroller" class="cbp-so-scroller">
 				<section class="cbp-so-section">
@@ -49,7 +49,7 @@
 						<h2>Number 1</h2>
 						<p>Tableau réalisé par le peintre américain Jackson Pollock en 1950. Cette huile, émail et aluminium sur toile est conservée à la National Gallery of Art, à Washington</p></article>
 					<figure class="cbp-so-side cbp-so-side-right">
-						<img src="images/N1.jpg" alt="Oeuvre 3">
+						<img src="images/numero1.jpg" alt="Oeuvre 3">
 					</figure>
 				</section>
 				<section class="cbp-so-section">
@@ -63,20 +63,20 @@
 				</section>
 				<section class="cbp-so-section">
 					<article class="cbp-so-side cbp-so-side-left">
-						<h2>Pudding lollipop</h2>
-						<p>Chupa chups pudding lollipop gummi bears gummies cupcake pie. Cookie cotton candy caramels. Oat cake dessert applicake. Sweet roll tiramisu sweet roll sweet roll.</p>
+						<h2>Shimmering Substance</h2>
+						<p>Peinture à l'huile créé en 1946</p>
 					</article>
 					<figure class="cbp-so-side cbp-so-side-right">
-						<img src="images/5.png" alt="img01">
+						<img src="images/shimmering.jpg" alt="Oeuvre 5">
 					</figure>
 				</section>
 				<section class="cbp-so-section">
 					<figure class="cbp-so-side cbp-so-side-left">
-						<img src="images/6.png" alt="img01">
+						<img src="images/full.jpg" alt="Oeuvre 6">
 					</figure>
 					<article class="cbp-so-side cbp-so-side-right">
-						<h2>Soufflé bonbon</h2>
-						<p>Cake cotton candy lollipop. Cake croissant cheesecake candy sugar plum icing apple pie wafer. Pie sugar plum tiramisu tiramisu pie fruitcake candy icing. Candy icing gummies gummies cheesecake brownie lemon drops chocolate gingerbread.</p>
+						<h2>Full Fathom Five</h2>
+						<p>Oeuvre réalisé en 1947. Peinture exposé au MOMA.</p>
 					</article>
 				</section>
 			</div>
